3676.	[bug]		"named-checkconf -z" now checks zones of type
			hint and redirect as well as master. [RT #35046]

3675.	[misc]		Provide a place for third parties to add version
			information for their extensions in the version
			file by setting the EXTENSIONS variable.

	--- 9.10.0a1 released ---

3674.	[bug]		RPZ zeroed ttls if the query type was '*'. [RT #35026]

3673.	[func]		New "in-view" zone option allows direct sharing
			of zones between views. [RT #32968]

3672.	[func]		Local address can now be specified when using
			dns_client API. [RT #34811]

3671.	[bug]		Don't allow dnssec-importkey overwrite a existing
			non-imported private key.

3670.	[bug]		Address read after free in server side of
			lwres_getrrsetbyname. [RT #29075]

3669.	[port]		freebsd: --with-gssapi needs -lhx509. [RT #35001]

3668.	[bug]		Fix cast in lex.c which could see 0xff treated as eof.
			[RT #34993]

3667.	[test]		dig: add support to keep the TCP socket open between
			successive queries (+[no]keepopen).  [RT #34918]

3666.	[func]		Add a tool, named-rrchecker, for checking the syntax
			of individual resource records.  This tool is intended
			to be called by provisioning systems so that the front
			end does not need to be upgraded to support new DNS
			record types. [RT #34778]

3665.	[bug]		Failure to release lock on error in receive_secure_db.
			[RT #34944]

3664.	[bug]		Updated OpenSSL PKCS#11 patches to fix active list
			locking and other bugs. [RT #34855]

3663.	[bug]		Address bugs in dns_rdata_fromstruct and
			dns_rdata_tostruct for WKS and ISDN types. [RT #34910]

3662.	[bug]		'host' could die if a UDP query timed out. [RT #34870]

3661.	[bug]		Address lock order reversal deadlock with inline zones.
			[RT #34856]

3660.	[cleanup]	Changed the name of "isc-config.sh" to "bind9-config".
			[RT #23825]

3659.	[port]		solaris: don't add explict dependencies/rules for
			python programs as make won't use the implicit rules.
			[RT #34835]
